--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -25,6 +27,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://Samitola.github.io/my-app",
   "browserslist": {
     "production": [
       ">0.2%",
